exercise6-roman-numerals-converter/c5-ec2instance.tf
# EC2 Instance
resource "aws_instance" "myec2vm" {
  ami = data.aws_ami.amzlinux2.id
  instance_type = var.instance_type
  user_data = file("${path.module}/app1-install.sh")
  key_name = var.instance_keypair
  vpc_security_group_ids = [ aws_security_group.webserver.id ]
  tags = {
    "Name" = "Kittens Carousel Static Website"
  }
}
